Navbar: fix #98 (Menu drop-down is cut off)

--- a/pootle/static/css/navbar.css
+++ b/pootle/static/css/navbar.css
@@ -293,7 +293,6 @@ html[dir="rtl"] #navbar .select2-container .select2-choice abbr
 #nav-main
 {
     position: absolute;
-    z-index: 1;
     top: 0;
     right: 0;
 }
